# top-js-libraries

./: .gitattributes  .gitignore  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: gradle-publish.yml  gradle.yml
go/: build.gradle.kts  go.mod  main.go
go/main/: go.mod  main.go
go/topjslibs/: go.mod  google_search_result.go  google_search_result_test.go  page_js_sources.go  page_js_sources_test.go  top_js_libraries.go  top_js_libraries_test.go  util.go
html/: oekotest.de.html  test.de.html  zeitschrift.html
java/: build.gradle.kts
java/src/main/java/com/peshchuk/topjslibs/: Main.java  (+4 more)
java/src/test/resources/: google.com.html  test-hefte.html  thema.html
kotlin/: build.gradle.kts
nodejs/: build.gradle.kts  package-lock.json  package.json  tsconfig.json
nodejs/src/: main.ts
nodejs/src/topjslibs/: GoogleSearchResult.ts  PageJsSources.ts  TopJsLibraries.ts
nodejs/test/topjslibs/: GoogleSearchResultTest.ts  PageJsSourcesTest.ts  TopJsLibrariesTest.ts  util.ts
python/: build.gradle.kts
python/main/topjslibs/: __init__.py  google_search_result.py  main.py  page_js_sources.py  top_js_libraries.py
python/test/test_topjslibs/: __init__.py  test_google_search_result.py  test_page_js_sources.py  test_top_js_libraries.py  util.py
rust/: Cargo.toml  build.gradle.kts
rust/src/: lib.rs  main.rs  top_js_libs.rs
rust/src/top_js_libs/: google_search_result.rs  google_search_result_test.rs  page_js_sources.rs  page_js_sources_test.rs  test_util.rs  top_js_libraries.rs  top_js_libraries_test.rs
scala/: build.gradle.kts  build.sbt
(+21 files in other folders)
